# attendance-server

./: .env.example  .gitignore  Cargo.toml  README.md  docker-compose.yml  openapi.json
examples/: README.md  client_login.rs  client_users.rs
migrations/: 20260302090001_create_users.sql  20260302090002_create_locations.sql  20260302090003_create_records.sql  20260302114000_normalize_schema.sql  20260302120000_add_audit_and_soft_delete.sql  20260302123000_fix_fk_and_ids.sql
src/: config.rs  db.rs  lib.rs  main.rs  models.rs  openapi.rs  state.rs  utils.rs
src/api/: router.rs
src/api/handlers/: auth.rs  health.rs  locations.rs  mod.rs  records.rs  users.rs
src/config/: settings.rs
src/db/: init.rs  mod.rs  pool.rs
src/domain/: attendance.rs  location.rs  mod.rs  role.rs  status.rs  user.rs
src/dto/: auth.rs  location_dto.rs  mod.rs  record_dto.rs  user_dto.rs
src/error/: api_error.rs
src/handlers/: auth.rs  health.rs  locations.rs  mod.rs  records.rs  users.rs
src/middleware/: auth.rs
src/repositories/: locations.rs  mod.rs  records.rs  users.rs
src/repository/: locations.rs  mod.rs  records.rs  users.rs
src/security/: crypto.rs  jwt.rs  mod.rs
src/service/: location_service.rs  mod.rs  record_service.rs  user_service.rs
src/utils/: geo.rs
tests/: geo_test.rs
