[package]
name = "attendance-server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["macros", "json"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.5", features = ["cors"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde", "clock"] }
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "mysql", "chrono", "uuid", "macros", "migrate"] }
dotenvy = "0.15"
jsonwebtoken = "9"
argon2 = { version = "0.5", features = ["password-hash"] }
password-hash = "0.5"
rand_core = "0.6"
utoipa = { version = "4", features = ["chrono", "uuid", "axum_extras"] }

[profile.release]
opt-level = 3

[dev-dependencies]
reqwest = { version = "0.11", features = ["json"] }
